--- a/src/50_Samples_%26_Templates/Product_Browse_Page.html
+++ b/src/50_Samples_%26_Templates/Product_Browse_Page.html
@@ -192,6 +192,11 @@ article#preview {
             }
         </script>
       </amp-state>
+      <!-- ## Filter results -->
+      <!-- 
+        You can implement a server side filtering by combining `amp-list` and `amp-bind`: the `src url` for `amp-bind` is updated everytime the user
+        selects a different input.
+       -->
       <amp-lightbox id="filter-lightbox" layout="nodisplay">
         <div>
           <h3 class="m1 mt2">Filter results</h3>
