--- a/src/50_More_Awesomeness/amp-awesome.html
+++ b/src/50_More_Awesomeness/amp-awesome.html
@@ -8,7 +8,7 @@
 <html ⚡>
 <head>
   <meta charset="utf-8">
-  <link rel="canonical" href="<%host%>/../components/amp-img/">
+  <link rel="canonical" href="<%host%>/../more_awesomeness/amp-awesome/">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <!-- ## Setup -->
